# browser-use-demo

./: .dockerignore  .env  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  env.template  pyproject.toml  requirements.txt
scripts/: build.sh  run.sh
src/: __init__.py  agent.py  clipboard.py  notify_bugs.py  pause_agent.py
